[package]
name = "nrf-modem"
version = "0.2.1"
edition = "2021"
rust-version = "1.64"
license = "MIT OR Apache-2.0"
description = "Async modem api for the nRF9160"
homepage = "https://github.com/diondokter/nrf-modem"
repository = "https://github.com/diondokter/nrf-modem"
readme = "README.md"
keywords = ["nRF9160", "LTE", "GPS", "NB-IoT", "embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrfxlib-sys = "2.1.0"
futures = { version = "0.3.24", default-features = false, features = ["async-await"] }
num_enum = { version = "0.5.7", default-features = false }
defmt = { version = "0.3.2", optional = true }
cortex-m = "0.7"
linked_list_allocator = { version="0.10.1", default-features=false, features=["use_spin"] }
nrf9160-pac = "0.12.2"
arrayvec = { version = "0.7", default-features = false }
at-commands = "0.5.2"
no-std-net = "0.6.0"
critical-section = "1.1"
embedded-io = { version = "0.4.0", features = ["async"] }

[features]
default = []
defmt = ["dep:defmt", "at-commands/defmt"]
