[package]
edition = "2021"
name = "dect-example"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-sync = "0.7.2"
embassy-executor = { version = "0.9.1", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-time = { version = "0.5.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.7.0", features = [
  "defmt",
  "nrf9151-s",
  "time-driver-rtc1",
  "gpiote",
  "unstable-pac",
  "time",
] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
heapless = "0.8.0"

cortex-m = { version = "0.7.6", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = { version = "2" }
embedded-io = "0.6.1"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
tinyrlibc = "0.5.0"

nrf-modem = { version = "0.9.0", path = "../../", features = [
  "nrf9151",
  "defmt",
  "dect",
  "modem-log",
] }
ts-103-636-numbers = { git = "https://github.com/ariel-os/hophop", version = "0.0.0", features = ["defmt"] }

[profile.release]
debug = 2
