[package]
edition = "2021"
name = "embassy-net-tcp-client-example"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.8.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-time = { version = "0.4.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.6.0", features = [
  "defmt",
  "nrf9160-s",
  "time-driver-rtc1",
  "gpiote",
  "unstable-pac",
  "time",
] }
embassy-net = { version = "0.7.0", features = [
  "defmt",
  "tcp",
  "proto-ipv4",
  "medium-ip",
] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

heapless = "0.8"
cortex-m = { version = "0.7.6", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = { version = "2" }
embedded-io = "0.6.1"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
tinyrlibc = "0.5.0"

# embassy-net branch
nrf-modem = { version = "0.7.3", features = [
  "embassy-net",
  "nrf9160",
  "defmt",
], path = "../.." }

[profile.release]
debug = 2
